@@ -26,6 +26,7 @@ void CosmOS(){
 	video_select_mode(VIDEO_MODE_TEXT);
 	
 	console_driver_interface_init();
+	console_select_driver(CONSOLE_DRIVER_VGA);
 	
 	kprintf("Loading CosmOS 0.1\n");
 	
