@@ -15,7 +15,7 @@
 void debug_print_uint64(uint64_t n){
 	char s[UINT64_DECIMAL_STRING_LENGTH];
 	
-	uitoa3(n, s, UINT64_DECIMAL_STRING_LENGTH);
+	uitoa3(n, s, UINT64_DECIMAL_STRING_LENGTH, 10);
 	
 	console_write(s);
 	console_write("\n");
